se corrigio lo de la imgen de cursame

--- a/public/assets/Cursame/resources/sass/app.scss
+++ b/public/assets/Cursame/resources/sass/app.scss
@@ -78,7 +78,7 @@ $list-active-gradient: matte;
 
 
 .x-form-login{
-	background-image:url('../images/wall-cursame.jpg');
+	background-image:url('../images/login-webapp.png');
 	background-position:50% 10%;
 }
 
