--- a/app/views/shared/_assets_fields.html.erb
+++ b/app/views/shared/_assets_fields.html.erb
@@ -14,7 +14,7 @@
         <%= asset.input :name, :input_html => {:class => "span4"} %>
         <%= asset.input :description, :input_html => {:class => "span4"} %>
         <%= asset.input :file, :as => :file, :input_html => {'data-upload-path' => upload_asset_path} %>
-        <%= asset.input :file_cache, :as => :hidden %>
+        <%# asset.input :file_cache, :as => :hidden %>
         <%= asset.input :_destroy, :as => :boolean %>
       </ol>
     </fieldset>
