--- a/app/views/banners/_dinamic.html.erb
+++ b/app/views/banners/_dinamic.html.erb
@@ -1,3 +1,3 @@
-<% if @banner.image_banner? %>
+<% if @banner.image_banner != nil %>
 <%= link_to image_tag(@banner.image_banner.banner), @banner.link, :target => "_blank"%>
 <%end%>
