--- a/app/views/shared/_assets_fields.html.erb
+++ b/app/views/shared/_assets_fields.html.erb
@@ -19,5 +19,5 @@
       </ol>
     </fieldset>
   <% end %>
-  <%= link_to t('courses.add_asset'), '#', :class => 'btn small info add_record', :style => 'display:none' %>
+  <%= link_to t('courses.add_asset'), '#', :class => 'btn small add_record right', :style => 'display:none' %>
 </fieldset>
