--- a/app/views/shared/_flash_viewer.html.erb
+++ b/app/views/shared/_flash_viewer.html.erb
@@ -4,7 +4,20 @@
     <h3><%= asset.name %></h3>
   </div>
   <div class="modal-body">
-    <object width="770px" height="500px" data="<%= asset.file.url%>" type="application/x-shockwave-flash" >
+
+    <object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" width="770" height="500" id="movie_name" align="middle">
+      <param name="movie" value="<%= asset.file.url%>"/>
+      <!--[if !IE]>-->
+      <object type="application/x-shockwave-flash" data="<%= asset.file.url%>" width="770" height="500">
+        <param name="movie" value="movie_name.swf"/>
+        <!--<![endif]-->
+        <a href="http://www.adobe.com/go/getflash">
+          <img src="http://www.adobe.com/images/shared/download_buttons/get_flash_player.gif" alt="Get Adobe Flash player"/>
+        </a>
+        <!--[if !IE]>-->
+      </object>
+      <!--<![endif]-->
+    </object>
 
   </div>
   <div class="modal-footer">
