--- a/app/views/shared/_flash_viewer.html.erb
+++ b/app/views/shared/_flash_viewer.html.erb
@@ -4,19 +4,14 @@
     <h3><%= asset.name %></h3>
   </div>
   <div class="modal-body">
-
-    <object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" width="770" height="500" id="movie_name" align="middle">
-      <param name="movie" value="<%= asset.file.url%>"/>
-      <!--[if !IE]>-->
-      <object type="application/x-shockwave-flash" data="<%= asset.file.url%>" width="770" height="500">
-        <param name="movie" value="movie_name.swf"/>
-        <!--<![endif]-->
-        <a href="http://www.adobe.com/go/getflash">
-          <img src="http://www.adobe.com/images/shared/download_buttons/get_flash_player.gif" alt="Get Adobe Flash player"/>
-        </a>
-        <!--[if !IE]>-->
-      </object>
-      <!--<![endif]-->
+    <object classid="clsid:d27cdb6e-ae6d-11cf-96b8-444553540000" codebase="http://download.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=9,0,0,0" width="770" height="500" id="player_small" align="middle">
+      <param name="allowScriptAccess" value="sameDomain">
+      <param name="allowFullScreen" value="false">
+      <param name="movie" value="<%= asset.file.url%>">
+      <param name="quality" value="high">
+      <param name="wmode" value="transparent">
+      <param name="bgcolor" value="#ffffff">
+      <embed src="<%= asset.file.url%>" quality="high" wmode="transparent" bgcolor="#ffffff" width="770" height="500" name="player_small" align="middle" allowscriptaccess="sameDomain" allowfullscreen="false" type="application/x-shockwave-flash" pluginspage="http://www.macromedia.com/go/getflashplayer">
     </object>
 
   </div>
