--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -128,15 +128,19 @@
  </div>
 </div>
 </div>
-<% if 1 == 0%>
+<% if current_user.new_old  == 0%>
    <div class="modal-backdrop.fade.in modal" style="background-color:#404040; color:#fff;">
 	
    <div class="modal-header" > 
-	<h3 style="color:#fff;"><center> Hola bienvenido a Cúrsame </cursame> </h3>
+	<h3 style="color:#fff;"><center> Hola bienvenido a Cúrsame restablece tu contraseña </cursame> </h3>
    </div>
     <div class="modal-body">
 	<center>
-	 <object width="420" height="315"><param name="movie"    value="http://www.youtube.com/v/gudXW66O9OM?version=3&amp;hl=es_ES&amp;rel=0"></param><param name="allowFullScreen" value="true" play="true"></param><param name="allowscriptaccess" value="always"></param><embed src="http://www.youtube.com/v/gudXW66O9OM?version=3&amp;hl=es_ES&amp;rel=0&amp;autoplay=1" type="application/x-shockwave-flash" width="520" height="315" allowscriptaccess="always" allowfullscreen="true" autoplay="true"></embed></object>
+	 <%= semantic_form_for @user do |form| %>
+	     <%= form.hidden_field :reset_password_token %>
+         <%= form.inputs :password, :password_confirmation %>
+         <%= form.submit "Realizar cambio de contraseña", :class => "btn"%>
+     <%end%>
 	</center>
 	</div>
 	<div class="modal-footer" style="background-color:#404040; color:#fff;">
