--- a/app/views/networks/principal_wall.html.erb
+++ b/app/views/networks/principal_wall.html.erb
@@ -34,3 +34,26 @@
     setupAutoScroll();
   });
 </script>
+<% if current_user.new_old  == 0%>
+   <div class="modal-backdrop.fade.in modal" style="background-color:#404040; color:#fff;">
+	
+   <div class="modal-header" > 
+	<h3 style="color:#fff;"><center> Hola bienvenido a Cúrsame restablece tu contraseña </cursame> </h3>
+   </div>
+    <div class="modal-body">
+	<center>
+	 <%= semantic_form_for @user do |form| %>
+	     <%= form.hidden_field :reset_password_token %>
+         <%= form.inputs :password, :password_confirmation %>
+	</center>
+	</div>
+	<div class="modal-footer" style="background-color:#404040; color:#fff;">
+		  
+		      <%= form.hidden_field :new_old, :value => 1 %>
+		        <%= form.hidden_field :user_id, :value => current_user.id%>
+          <%= form.submit "Realizar cambio de contraseña", :class => "btn"%>
+	 <%end%>
+	</div>
+   </div>
+<%else%>
+<%end%>
