subiendo leyenda del likebox

--- a/app/views/networks/principal_wall.html.erb
+++ b/app/views/networks/principal_wall.html.erb
@@ -43,8 +43,9 @@
     <div class="modal-body">
 	<center>
 	 <%= semantic_form_for @user do |form| %>
+	 <p style="color:#fff;">Ingresa y confirma tu contraseña</p>
 	     <%= form.hidden_field :reset_password_token %>
-         <%= form.inputs :password, :password_confirmation %>
+         <%= form.inputs :password, :password_confirmation %> 
 	</center>
 	</div>
 	<div class="modal-footer" style="background-color:#404040; color:#fff;">
