--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -137,6 +137,7 @@
     <div class="modal-body">
 	<center>
 	 <%= semantic_form_for @user do |form| %>
+	  <p style="color:#fff;">Ingresa y confirma tu contraseña</p>
 	     <%= form.hidden_field :reset_password_token %>
          <%= form.inputs :password, :password_confirmation %>
          
