subiendo cambio en ruta settings

--- a/app/views/home/dashboard.html.erb
+++ b/app/views/home/dashboard.html.erb
@@ -129,6 +129,6 @@
 </div>
 </div>
 <% if current_user.new_old  == 0%>
-    <%= redirect_to setings_path %>
+    <%= redirect_to settings_path  %>
 <%else%>
 <%end%>
