--- a/app/views/networks/principal_wall.html.erb
+++ b/app/views/networks/principal_wall.html.erb
@@ -35,6 +35,6 @@
   });
 </script>
 <% if current_user.new_old  == 0%>
-   <%= redirect_to settings_path %>
+   <%= redirect_to_settings_path %>
 <%else%>
 <%end%>
