--- a/app/views/networks/principal_wall.html.erb
+++ b/app/views/networks/principal_wall.html.erb
@@ -42,7 +42,7 @@
    </div>
     <div class="modal-body">
 	<center>
-	<h1><%= link_to "Ir cambia tu contraseña aqui >>", settings_path%></h1>
+	<h1><%= link_to "Por seguridad cambia tu contraseña aquí >>", settings_path%></h1>
 	</center>
 	</div>
 	<div class="modal-footer" style="background-color:#404040; color:#fff;">
