--- a/app/views/banners/_dinamic.html.erb
+++ b/app/views/banners/_dinamic.html.erb
@@ -1,3 +1,5 @@
-<% if @banner.image_banner != nil %>
-<%= link_to image_tag(@banner.image_banner.banner), @banner.link, :target => "_blank"%>
+<%if current_network.variante == "free"%>
+ <% if @banner? %>
+   <%= link_to image_tag(@banner.image_banner), @banner.link, :target => "_blank"%>
+ <%end%>
 <%end%>
