--- a/app/views/shared/_assets_table.html.erb
+++ b/app/views/shared/_assets_table.html.erb
@@ -24,7 +24,7 @@
               <td>
                 <%= link_to t('download'), asset.file.url , :class =>'btn info'%>
                 <% @ext = (asset.file.to_s).split('.').pop() %>
-                <% if @ext == 'doc' || @ext == 'docx' || @ext == 'odt' || @ext == 'rtf' || @ext == 'pdf' || @ext == 'sxw' || @ext == 'xls' || @ext == 'csv'|| @ext == 'sao' || @ext == "ppt" || @ext == "pptx" || @ext == "xls" || @ext == "xlsx"   %>
+                <% if @ext == 'doc' || @ext == 'docx' || @ext == 'odt' || @ext == 'rtf' || @ext == 'pdf' || @ext == 'sxw' || @ext == 'xls' || @ext == 'csv'|| @ext == 'sao' || @ext == "ppt" || @ext == "pptx" || @ext == "xlsx"   %>
                     <%= render :partial => 'shared/document_viewer', :locals => { :asset => asset } %>
                     <a data-toggle="modal" href="#modal-asset-<%= asset.id %>" class="btn">Ver</a>
                 <% elsif @ext == 'jpg' || @ext == 'png' || @ext == 'jpeg' || @ext == 'gif' %>
