arreglando el bug de bug_answer se resolvio quitando una validación incorrecta del modelo se modifico el basecontrller del admin y el bug answer_corroller se coloco tambien el form status d send resports  cambios en mejoras de variables, se modificarion las rutas pero despues se regresaron a su estado nativo

--- a/app/views/send_reports/_form_status.html.erb
+++ b/app/views/send_reports/_form_status.html.erb
@@ -1,6 +1,6 @@
 <div class="container">
 <div class="span10" style="border:0px;">
-<%= form_for (@bug_answer = BugAnswer.new) do |f| %>
+<%= form_for @bug_answer do |f| %>
 <div class="field">
    <%= f.label :container %><br />
    <%= f.text_area :container, :rows => 8, :cols => 45 %>
