Commit para poder hacer sincronizar

--- a/app/views/surveys/_question_fields.html.erb
+++ b/app/views/surveys/_question_fields.html.erb
@@ -22,3 +22,4 @@
     <%= link_to t('.add_question'), '#', :class => 'btn small info add_record', :style => 'display:none' %>
   </fieldset>
 </div>
+<%= debug form.object.questions %>
