subiendo mejoras en servicio de soporte técnico

--- a/app/views/user_mailer/new_bug_answer_by_admin.html.erb
+++ b/app/views/user_mailer/new_bug_answer_by_admin.html.erb
@@ -2,4 +2,4 @@
 <h3 class="h3">¡Se ha respondido tu tiket de error o sugerencia!</h3><br>
 <strong>¡Ingresa para conocer la respuesta!</strong>
 <br>
-<h1> <%= link_to 'Ver Respuesta >>', soporte_url(@subdomain) %></h1>
+<h1> <%= link_to 'Ver Respuesta >>', soporte_url(:subdomain=>@subdomain) %></h1>
