subiendo curso id

--- a/app/views/calification/_index.html.erb
+++ b/app/views/calification/_index.html.erb
@@ -1,4 +1,4 @@
-<% if accessible_course.id == "10"%>
+<% if @course.id == "10"%>
 
 <div class="spam10">
 	<div class="span-two-thirds">
@@ -35,6 +35,8 @@
 </div>
 
 <%else%>
+
+
 <div class="spam10">
 	<div class="span-two-thirds">
 	    <div class="tabs">
