--- a/app/views/calification/_index.html.erb
+++ b/app/views/calification/_index.html.erb
@@ -1,4 +1,4 @@
-<% if @course.id == "10"%>
+<% if @course.id == 10%>
 
 <div class="spam10">
 	<div class="span-two-thirds">
@@ -15,14 +15,26 @@
     <thead>
 	<tr>
 	<th class="blue"><%=molto.name%></th>	
+	</tr>
+     <% molto.deliveries.each do |delivery|%>
+      <% if  delivery.user.view_status =='fantom'%>
+      <%else%>
+     </thead>
+     <tbody>
+	<tr class="asset">
+    <td><p><%=link_to image_tag delivery.user.avatar_file.xsmall.url %>
+        <%=  delivery.user.name %> / Porcentaje de la entrega: <b><%= (delivery.score ? delivery.score : 0) if delivery.raiting%> %</b></p></td>
+
+    </tr>
      </tbody>
+     <%end%>
+	<%end%>
    <%end%> 
    </table>
 </div>
 </div>
 
 <%else%>
-
 
 <div class="spam10">
 	<div class="span-two-thirds">
