validando porcentaje de entrega

--- a/app/views/calification/_index.html.erb
+++ b/app/views/calification/_index.html.erb
@@ -24,7 +24,7 @@
                 	<tr class="asset">
                 	       
                     <td><p>
-                        <%=  delivery.user.name %> / Porcentaje de la entrega: <b><%= (delivery.score ? delivery.score : 0) if delivery.raiting%> %</b></p></td>
+                     Porcentaje de la entrega: <b><%= (delivery.score ? delivery.score : 0) if delivery.raiting%> %</b></p></td>
 
                     </tr>
                      </tbody>
