--- a/app/views/calification/_index.html.erb
+++ b/app/views/calification/_index.html.erb
@@ -24,10 +24,9 @@
                 	<tr class="asset">
                 	       
                     <td><p>
-                            <%if image_tag delivery.user.avatar_file.xsmall.url != nil %>
-                               <%=link_to image_tag delivery.user.avatar_file.xsmall.url %>
-                           <%end%>
-                        <%=  delivery.user.name != nil  %> / Porcentaje de la entrega: <b><%= (delivery.score ? delivery.score : 0) if delivery.raiting != nil  %> %</b></p></td>
+                        
+                               <%=link_to image_tag delivery.user.avatar_file.xsmall.url if image_tag delivery.user.avatar_file.xsmall.url != nil  %>
+                        <%=  delivery.user.name if  delivery.user.name != nil  %>%</b></p></td>
 
                     </tr>
                      </tbody>
