--- a/app/views/calification/_index.html.erb
+++ b/app/views/calification/_index.html.erb
@@ -26,7 +26,8 @@
                     <td><p>
                         
                                <%=link_to image_tag delivery.user.avatar_file.xsmall.url if image_tag delivery.user.avatar_file.xsmall.url != nil  %>
-                        <%=  delivery.user.name if  delivery.user.name != nil  %>%</b></p></td>
+                        <%=  delivery.user.name if  delivery.user.name != nil  %> / Porcentaje de la
+         entrega: <b><%  if  delivery.score != nil %> <%= (delivery.score ? delivery.score : 0) if delivery.raiting != nil  %>%<%end%></b></p></td>
 
                     </tr>
                      </tbody>
