--- a/app/views/calification/_index.html.erb
+++ b/app/views/calification/_index.html.erb
@@ -29,7 +29,7 @@
                         
                                <%=link_to image_tag delivery.user.avatar_file.xsmall.url if image_tag delivery.user.avatar_file.xsmall.url != nil  %>
                         <%=  delivery.user.name if  delivery.user.name != nil  %> / Porcentaje de la
-         entrega:<% if (delivery.raiting < 0 && delivery.raiting != nil) %><b><%= (delivery.score ? delivery.score : 0) if (delivery.raiting < 0 && delivery.raiting != nil) %>%<%else%>0%<%end%></b></p></td>
+         entrega:<% if (delivery.raiting < 0 && delivery.raiting != nil) %><b><%= (delivery.score ? delivery.score : 0) if (delivery.raiting < 0 && delivery.raiting != nil) %>%<%else%><b>0%</b><%end%></b></p></td>
 
                     </tr>
                      </tbody>
@@ -120,6 +120,220 @@
                  </table>
                </div>
               </div>
+              <div class="tab-pane" id="tab4">	
+              <% totales = []%>
+              <% totales2=[] %>
+              <% @course.users.each do |user|%>                      
+                 <% total_deliveries= 0%>
+                 <% total_survey= 0%>
+
+                <%user.deliveries.each do |delivery|%>
+
+
+
+                  <% total_deliveries=total_deliveries + delivery.score ? delivery.score : 0  if (delivery.raiting < 0 && delivery.raiting != nil) %>
+
+
+                <%end%>
+                 <%user.survey_replies.each do |survey|%>
+
+                  <% survey.score %>
+                  <% total_survey=total_survey+survey.score %>
+
+                <%end%>
+                 <%(total_deliveries=total_deliveries/user.deliveries.count) if user.deliveries.count > 0%>
+
+                  <%(total_survey=total_survey/user.survey_replies.count) if user.survey_replies.count > 0%>
+               	<% (total_survey+total_deliveries)/2%>
+                  <% totales.push(total_deliveries)%>
+                  <% totales2.push(total_survey)%>
+              <%end%>
+              <div id="calificacioncal">erer</div>
+               <script type="text/javascript" charset="utf-8">
+              var chart;
+              $(document).ready(function() {
+              	chart = new Highcharts.Chart({
+              		chart: {
+              			renderTo: 'calificacioncal',
+              			type: 'areaspline'
+              		},
+              		title: {
+              			text: 'Relación actual de actividades'
+              		},
+              		subtitle: {
+              	            text: "relación entre <%= t('courses.assignments.assignments') %> y <%= t('surveys.index.header')%> para interpretación temporal por usuarios"},
+              		legend: {
+              			layout: 'vertical',
+              			align: 'left',
+              			verticalAlign: 'top',
+              			x: 50,
+              			y: 100,
+              			floating: true,
+              			borderWidth: 1,
+              			backgroundColor: '#FFFFFF'
+              		},
+              		xAxis: {
+
+              			categories: ["Id de alumnos"]
+              		},
+              		yAxis: {
+              			title: {
+              				text: 'Movimiento temporal de los usuarios'
+              			}
+              		},
+              		tooltip: {
+              			formatter: function() {
+              				return ''+
+              				this.series.name + this.y +"%";
+              			}
+              		},
+              		credits: {
+              			enabled: false
+              		},
+              		plotOptions: {
+              			areaspline: {
+              				fillOpacity: 0.5
+              			}
+              		},
+              		series: [{
+              			name: "<%= t('courses.assignments.assignments') %>",
+              			data:<%= totales %>
+              		}, {
+              			name: "<%= t('surveys.index.header')%>",
+              			data:<%= totales2 %> 
+              		}]
+              	});
+              });
+
+               </script>   
+
+              <% grafica_reprobacion =[]%>
+              <% porcento_examenes =[]%>
+              <% @course.surveys.each do |survey|%>
+
+                <% calif = 0%>
+                <% cod = 0%>
+                 <%survey.survey_replies.each do |reply|%>
+                      <%calif = calif + reply.score%>
+                      <% cod = calif/@course.users.count%>
+                      <% coda = cod-100%>
+                      <% porcento_examenes.push(cod)%>
+                      <% grafica_reprobacion.push(coda)%>
+                 <%end%>
+              <% end %>
+
+              <div id="valuecal"></div>
+                  <script type="text/javascript" charset="utf-8">
+                  
+              	   var chart;
+              	$(document).ready(function() {
+              		chart = new Highcharts.Chart({
+              			chart: {
+              				renderTo: 'valuecal',
+              				type: 'areaspline'
+              			},
+              			title: {
+              				text: 'Porcentaje de aprobación de examenes'
+              			},
+              			subtitle: {
+              	            text: "Porcentaje de movimientos promedios de <%= t('surveys.index.header')%> y alumnos"
+              	        },
+              			xAxis: {
+              				categories: ["Movimiento promedio de <%= t('surveys.index.header')%> actualmente en el grupo"]
+
+
+              			},		
+              			yAxis:{
+              					 min: -100,
+              			            title: {
+              			                text: 'Porcentaje %'
+              			            }
+              			},
+
+              			tooltip: {
+              				formatter: function() {
+              					return ''+
+              						this.series.name +' '+ this.y +'%';
+              				}
+              			},
+              			credits: {
+              				enabled: false
+              			},
+              			series: [{
+              				name: 'Aprobados',
+              				data: <%=porcento_examenes%>
+              			}, {
+              				name: 'Reprobados',
+              				data: <%= grafica_reprobacion %>
+              			}]
+              		});
+              	});
+              	
+              	</script>
+              <% grafica_reprobacion_delivery =[]%>
+              <% porcento_delivery =[]%>
+              <% @course.assignments.each do |assigment|%>
+                <% califn = 0%>
+                <% codn = 0%>
+               <%assigment.deliveries.each do |delivery|%>
+
+                 	<% califn = califn + delivery.score ? delivery.score : 0 if (delivery.raiting < 0 && delivery.raiting != nil)%>
+                  <% codn = califn/@course.users.count%>
+                  <% codan = 100-codn%>
+                  <% porcento_delivery.push(codan)%>
+                  <% grafica_reprobacion_delivery.push(codn)%>  
+               <%end%>
+              <%end%>
+              <div id="value2cal"></div>
+              <script type="text/javascript" charset="utf-8">
+              	   var chart;
+              	$(document).ready(function() {
+              		chart = new Highcharts.Chart({
+              			chart: {
+              				renderTo: 'value2cal',
+              				type: 'areaspline'
+              			},
+              			title: {
+              				text: "Porcentaje de aprobación en <%= t('courses.assignments.assignments') %>"
+              			},
+              			subtitle: {
+              	            text: "Porcentaje de aprobación de <%= t('courses.assignments.assignments') %> con razón en alumnos "
+              	        },
+              			xAxis: {
+              				categories: ["<%= t('courses.assignments.assignments') %>"]
+
+
+              			},		
+              			yAxis:{
+              					 min: -100,
+              			            title: {
+              			                text: 'Porcentaje %'
+              			            }
+              			},
+
+              			tooltip: {
+              				formatter: function() {
+              					return ''+
+              						this.series.name +' '+ this.y +'%';
+              				}
+              			},
+              			credits: {
+              				enabled: false
+              			},
+              			series: [{
+              				name: 'Aprobadas',
+              				data: <%=porcento_delivery%>
+              			}, {
+              				name: 'Reprobadas',
+              				data: <%= grafica_reprobacion_delivery %>
+              			}]
+              		});
+              	});
+              	</script> 
+                </div> 
+                </div>
+              </div>
+              
             </div>
         </div>
     </div>    
