subiendo tab faltante de analytic

--- a/app/views/calification/_index.html.erb
+++ b/app/views/calification/_index.html.erb
@@ -7,6 +7,8 @@
 	            <li><a href="#res" data-toggle="tab"><%= t('courses.assignments.assignments') %></a></li>
 	            <li><a href="#tab2" data-toggle="tab"><%= t('surveys.index.header')%></a></li>
     	        <li><a href="#tab3" data-toggle="tab"><%=t('courses.calification.calificación')%></a></li>
+    	        <li><a href="#tab4" data-toggle="tab"><%= t('courses.analytics') %></a></li>
+   	         
 	        </ul>
 	        <div class="tab-content">	
                 <div class="tab-pane active" id="res">	
